k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  labels:
    app: todo-service
spec:
  type: ClusterIP
  selector:
    app: todo-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
